<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/login_background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/verify_phone"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_sec"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="58dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/we_have_sent_you_4_digit_otp_on_n_your_registered_number"
        android:textAlignment="center"
        android:textColor="@color/dark_blue_65"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_tel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="28dp"
        android:textColorHint="@color/dark_grey"
        app:boxStrokeColor="#C2C4CB"
        app:boxStrokeWidth="1dp"
        app:errorEnabled="false"
        app:errorTextColor="@color/red_button"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobile_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="14dp"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otp_input_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:elevation="10dp"
        app:errorTextColor="@android:color/white"
        app:hintTextColor="@color/dark_grey"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_tel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otp_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="6"
            android:digits="0123456789"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="28dp"
        android:text="@string/continu"
        style="@style/GrayButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_input_ly" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="74dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/didn_t_received_an_otp_resend"
        android:textColor="@color/dark_blue_sec"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>